[package]
name = "avm"
version = "0.1.0"
edition = "2021"
authors = ["Karl Yerkes <karl.yerkes@gmail.com>"]
description = "a sort of audio virtual machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.0.29"
cpal = "0.14.2"
byteorder = "1"
